added gustify-content space-between to nav

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -4,6 +4,8 @@ nav {
   width: 100pw;
   color: #FFFFFF;
   background-color: #4056A1;
+  flex-direction: row;
+  justify-content: space-between;
 
 
 }
