--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,7 +6,7 @@ nav {
   background-color: #4056A1;
   flex-direction: row;
   justify-content: space-between;
-
+  align-items: center;
 
 }
 
@@ -18,10 +18,15 @@ span {
 
 }
 
-a.compose {
+.composeTweet {
   display: flex;
   align-self: flex-end;
   color: #FFFFFF;
   font-family: 'Sans Source Pro', sans-serif;
   margin: 1.5em;
+}
+
+.arrowIcon {
+  width: 50px;
+  height: 50px;
 }
