--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -10,13 +10,18 @@
 }
 
 .below-tweet-input {
+  font-family: 'Bungee', sans-serif;
   display: flex;
+  justify-content: space-between;
+
 }
 
 .tweet-button {
   background-color: cornflowerblue;
-  font-family: 'Bungee', sans-serif;
   color: #FFFFFF;
+}
 
+.counter {
+ 
 
 }
