--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -1,24 +1,59 @@
 .tweet-container {
-  color: greenyellow;
+  color: grey;
   border: 5px;
   border-color: rgb(53, 52, 52);
   border-style: solid;
   background-color: #f4f1ec;
   height: 200px;
-  display: flex;
+}
+
+.article-tweet {
+  width: 100%;
+
 }
 
 .tweet-header {
-  height: 100px;
+  height: 120px;
   background-color: inherit;
-  display: flex;
-  justify-content: flex-start;
   border-bottom: solid;
   border-width: 100%;
   border-color: rgb(53, 52, 52);
+
+
+}
+
+.tweet-userID {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+  align-items: baseline;
+}
+.fas-fa-air-freshener {
+  align-self: flex-start;
+
+}
+
+.atUser {
+  color: lightblue;
+  flex-direction: column;
+
+  justify-content: flex-end;
+  
 }
 
 .tweet-footer {
   height: 50px;
   background-color: inherit;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: baseline;
+}
+
+.span-tweet {
+  flex-direction: row;
+}
+
+.tweet-container:hover {
+  box-shadow: 0 0 11px
+   lightseagreen;
 }
