--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,6 +6,9 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
 
 }
 
