added tweet-container:hoover.username to make username appear when hovering over tweetbox

--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -41,8 +41,11 @@
 .username {
   line-height: 72px;
   font-size: 36px;
-  display: none;
-  display: block;
+  opacity: 0;
+}
+
+.tweet-container:hover .username{
+  opacity: 1;
 }
 
 .fas-fa-air-freshener {
