renamed zombieContainer to new-tweet-input-container

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,7 +31,7 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- .zombieContainer {
+ .new-tweet-input-container {
   width: 90%;
   background-color: #f4f1ec;
   margin-left: 5%;
