--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+.header {
   display: flex;
   height: 400px;
   width: 100pw;
@@ -9,8 +9,5 @@ header {
   background-color: rgb(243, 144, 22);
 }
 
-.your-name {
-  display: flex;
 
-}
 
