--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,4 +1,4 @@
-nav {
+.nav {
   display: flex;
   height: 120px;
   color: #FFFFFF;
@@ -6,7 +6,7 @@ nav {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
 
@@ -33,10 +33,11 @@ span {
 
 .arrow-container {
   text-align: center;
+  color: rgb(243, 144, 22);
 }
 
 .arrow-icon {
-  width: 20px;
-  height: 20px;
-  color: rgb(236, 24, 24);
+  width: 10px;
+  height: 10px;
+  color: rgb(243, 144, 22);
 }
