--- a/public/styles/tweet-container.css
+++ b/public/styles/tweet-container.css
@@ -1,24 +1,25 @@
 
 .tweet {
   width: 100%;
-  color: grey;
+  color: #808080;
   border: 5px;
-  border-color: rgb(53, 52, 52);
+  border-color: #353434;
   border-style: solid;
   background-color: #f4f1ec;
+  margin-top: 0px;
   margin-bottom: 30px;
   padding: 15px 20px;
 }
 
 .tweet-header {
-  height: 120px;
+  height: 100px;
   background-color: inherit;
 }
 
 .tweet-body {
   border-width: 3px;
   border-bottom: solid;
-  border-color: rgb(53, 52, 52);
+  border-color: #353434;
   margin: 0 auto;
   padding: 15px;
 }
@@ -67,6 +68,6 @@
 }
 
 .tweet-container:hover {
-  box-shadow: 0 0 11px
-   lightseagreen;
+  box-shadow: 10px 5px 5px red;
+   
 }
