refactor color consistancy

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   background: url('../images/asfalt-light-background-texture.png');
-  background-color: rgb(243, 144, 22);
+  background-color: #f39016;
 }
 
 
