--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,7 +2,8 @@
   display: flex;
   height: 120px;
   color: #FFFFFF;
-  background-color: #4056A1;
+  /* background-color: #4056A1; */
+  /* background-color:  #f39016;; */
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -12,7 +13,7 @@
 
 }
 
-span {
+.span {
   display: flex;
   align-items: baseline;
   align-self: flex-start;
@@ -33,11 +34,10 @@ span {
 
 .arrow-container {
   text-align: center;
-  color: rgb(243, 144, 22);
+  color: #f31616;
 }
 
 .arrow-icon {
   width: 10px;
   height: 10px;
-  color: rgb(243, 144, 22);
 }
