added .tweeter class and left margin

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -17,7 +17,10 @@
   align-self: flex-start;
   font-family: 'Bungee', sans-serif;
   margin: 1.5em;
+}
 
+.tweeter {
+  margin-left: 1em;
 }
 
 .composeTweet {
